Fixed alignment on awesome section

--- a/style.css
+++ b/style.css
@@ -176,6 +176,8 @@ h3 {
 	color: white;
 }
 
-.col-lg-4 {
-	align-content: center !important;
+
+
+.align-items-center {
+	text-align: center;
 }
